--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -47,17 +47,17 @@
   {{ content }}
   
   <div id="footer">
-  	<address>
-  		<span class="copyright">
-  			Content by <a href="/info/site.html">{{ site.author.name }}</a>. Design by 
-  			<a href="http://mark.reid.name/">Mark Reid</a>
-  			<br/>
-  			(<a rel="licence" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Some rights reserved</a>)			
-  		</span>
-  		<span class="engine">
-  			Powered by <a href="http://github.com/mojombo/jekyll/" title="A static, minimalist CMS">Jekyll</a>
-  		</span>
-  	</address>
+    <address>
+                <span class="copyright">
+                        &copy;<a href="/info/site.html">{{ site.author.name }}</a>. Design by
+                        <a href="http://mark.reid.name/">Mark Reid</a>
+                        <br/>
+                        (<a rel="licence" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Some rights reserved</a>)
+                </span>
+                <span class="engine">
+                        Powered by <a href="http://github.com/mojombo/jekyll/" title="A static, minimalist CMS">Jekyll</a>, <a href="https://pages.github.com/" title="Websites for you and your projects">GitHub Pages</a>
+                </span>
+        </address>
   </div>
   
 </div>
