--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -49,14 +49,15 @@
   
   <div id="footer">
     <address>
+		<a href="http://www.linkedin.com/in/{{ site.author.linkedin }}/" alt="LinkedIn">LinkedIn</a> | <a href="http://github.com/{{ site.author.github }}/" alt="Github">Github</a> | <a href="http://twitter.com/{{ site.author.twitter }}/" alt="Twitter">Twitter</a> | <a href="mailto:{{ site.author.email }}" alt="email">Email</a> <br/>
                 <span class="copyright">
-                        &copy;  <a href="/info/site.html">{{ site.author.name }}</a>. Design by
+                        &copy;  <a href="/info/site.html">{{ site.author.name }}</a> 2014. Design by
                         <a href="http://mark.reid.name/">Mark Reid</a>
                         <br/>
                         (<a rel="licence" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Some rights reserved</a>)
                 </span>
                 <span class="engine">
-                        Powered by <a href="http://github.com/mojombo/jekyll/" title="A static, minimalist CMS">Jekyll</a>, <a href="https://pages.github.com/" title="Websites for you and your projects">GitHub Pages</a>
+                        Powered by <a href="http://github.com/mojombo/jekyll/" title="A static, minimalist CMS">Jekyll</a> & <a href="https://pages.github.com/" title="Websites for you and your projects">GitHub Pages</a>
                 </span>
         </address>
   </div>
