--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -462,6 +462,12 @@ p.delicious-extended:before { content: ' — '; }
 	margin: .5em 0 0 0;
 	text-align: right;
 }
+#footer social {
+        position: relative;
+        margin: .5em 0 0 0;
+        text-align: center;
+	font-size: 100%;
+}
 #footer a {
 	font-variant: small-caps;
 	font-style: normal;
