--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -462,12 +462,6 @@ p.delicious-extended:before { content: ' — '; }
 	margin: .5em 0 0 0;
 	text-align: right;
 }
-#footer social {
-        position: relative;
-        margin: .5em 0 0 0;
-        text-align: center;
-	font-size: 100%;
-}
 #footer a {
 	font-variant: small-caps;
 	font-style: normal;
@@ -486,6 +480,13 @@ p.delicious-extended:before { content: ' — '; }
 	display: block;
 	right: 0;
 }
+#footer .social {
+        position: relative;
+        margin: .5em 0 0 0;
+        text-align: center;
+	font-size: 100%;
+}
+
 /* @end */
 
 
