Fix the footer social links

--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -46,12 +46,12 @@
   </div>
 
   {{ content }}
-  
+ 
+  <div id="social">
+	<a href="http://in.linkedin.com/in/gkrishnan34{{ site.author.linkedin }}/" alt="LinkedIn">LinkedIn</a> | <a href="http://github.com/{{ site.author.github }}/" alt="Github">Github</a> | <a href="http://twitter.com/{{ site.author.twitter }}/" alt="Twitter">Twitter</a> | <a href="mailto:{{ site.author.email }}" alt="email">Email</a> <br/>
+  </div> 
   <div id="footer">
   <address>
-	<span class="social">
-		<a href="http://in.linkedin.com/in/gkrishnan34{{ site.author.linkedin }}/" alt="LinkedIn">LinkedIn</a> | <a href="http://github.com/{{ site.author.github }}/" alt="Github">Github</a> | <a href="http://twitter.com/{{ site.author.twitter }}/" alt="Twitter">Twitter</a> | <a href="mailto:{{ site.author.email }}" alt="email">Email</a> <br/>
-	</span>
           	 <span class="copyright">
                         &copy;  <a href="/info/site.html">{{ site.author.name }}</a> 2014. Design by
                         <a href="http://mark.reid.name/">Mark Reid</a>
