Remove categories and add tags instead

--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -39,9 +39,9 @@
       <li><a class="home" href="{{ HOME_PATH }}">Home</a></li>
       <li><a  href="/archive.html">Archive</a></li>
       <li><a  href="/pages.html">Pages</a></li>
-      <li><a  href="/categories.html">Categories</a></li>
+      <!--<li><a  href="/categories.html">Categories</a></li>-->
       <li><a href="/pages/about.html">About</a></li>
-     <!-- <li><a  href="/tags.html">Tags</a></li> -->
+      <li><a  href="/tags.html">Tags</a></li> 
     </ul>
   </div>
 
