--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -40,7 +40,7 @@
       <li><a  href="/archive.html">Archive</a></li>
       <li><a  href="/pages.html">Pages</a></li>
       <!--<li><a  href="/categories.html">Categories</a></li>-->
-      <li><a href="/pages/about.html">About</a></li>
+      <li><a href="/about">About</a></li>
       <li><a  href="/tags.html">Tags</a></li> 
     </ul>
   </div>
