Remove hyperlink on authorname

--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -53,7 +53,7 @@
   <div id="footer">
   <address>
           	 <span class="copyright">
-                        &copy;  <a href="/info/site.html">{{ site.author.name }}</a> 2014. Design by
+                        &copy;  {{ site.author.name }} 2014. Design by
                         <a href="http://mark.reid.name/">Mark Reid</a>
                         <br/>
                         (<a rel="licence" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Some rights reserved</a>)
